--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     </header>
     <div class="hero"></div>
     <main class="content">
-        <section class="card">
+        <section id="search-engine-optimization" class="card">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of notebook that describes search engine optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="card">
+        <section id="online-reputation-management" class="card">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Photo of a computer"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="card">
+        <section id="social-media-marketing" class="card">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Photo that contains many social media apps and terms" />
             <h2>Social Media Marketing</h2>
             <p>
